# AI-Face-Recognition-API

./: .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 222ed6ee8275_.py  614f6e9480d9_migrate_embedding_to_vector.py  67743383a8f2_add_cascade_delete_faces.py  94f0198d433f_changing_relationship_between_user_and_.py  9ffd37578066_.py  cfaffc97d402_initial_schema.py  dbd84ae9a59a_add_detection_confidence_score_to_the_.py  fc7333bafe32_create_users_table.py
app/: main.py
app/api/: deps.py
app/core/: config.py  limiter.py  logs.py  security.py
app/db/: base.py  models.py  session.py
app/middleware/: benchmark_timing.py
app/models/: detector.py  embedder.py  insightface.py  matcher.py
app/schemas/: auth_schema.py  detection.py  recognize_schema.py  register_schema.py
app/services/: auth.py  deletion.py  image_io.py  preprocessing.py  (+3 more)
benchmarks/: app_middleware_benchmark_timing.py  auth_helper.py  benchmark-results.md  config.py  csv_writer.py  data_gen.py  db_seeder.py  load_test.py  patched_recognition.py  requirements-benchmark.txt  run_benchmark.py  run_benchmark_concurrent.py  run_benchmark_direct.py
doc/: PERFORMANCE.md  README.md  TECHNICAL_DEEP_DIVE.md  project_structure.md  roadmap_and_milestones.md  skills_and_learning.md  what_to_learn_why_when.md
reports/: test_report.html
src/: main.py
tests/: README.md  __init__.py  conftest.py  run_tests.sh  test_embedder.py  test_recognition_endpoint.py  test_recognition_service.py
(+12 files in other folders)
